--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <h1 class="name">Start Bootstrap</h1>
+                        <h1 class="name">Medrec Platform</h1>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Developers - API  </span>
                     </div>
                 </div>
             </div>
@@ -168,10 +168,15 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>The MedRec Platform is essentially a playpen with some basic elements at its core such as,
+                      a rudimentary System of Record (Avitek – MedRec) to act as a discussion point around Systems of Record, and the need to differentiate and innovate outside of the Systems of Record.
+a re-developed next generation version of MedRec based on a MicroServices based approach (MedRec NG) to deliver learnings around API development and DevOps.
+a modern User Interface rolled on top of the API's developed for MedRec NG to demonstrate what is possible re improved customer experience.
+Java based internal APIs that support CRUD operations against MedRec NG to provide a starting point upon which participants can bring their innovative ideas to explore and prove.
+With the core application and internal API’s locked down as Version 1, the MedRec Platform Playpen will then serve as a vehicle to overlay innovative ideas and implement them using various Cloud Services (IaaS, PaaS, SaaS) and Open Source software to demonstrate proof points around the ideas.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a developer looking to share your projects, this platform is the perfect starting point!</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
