--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ With the core application and internal API’s locked down as Version 1, the Med
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                        <i class="fa fa-download"></i> Access API's
                     </a>
                 </div>
             </div>
