--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@ With the core application and internal API’s locked down as Version 1, the Med
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <p>4 Julius Avenue
+                            <br>Oracle Australia</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -273,8 +273,8 @@ With the core application and internal API’s locked down as Version 1, the Med
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>About Medrec</h3>
+                        <p>Medrec is set of API's created by the Oracle Cloud Platform Team <a href="http://cloud.oracle.com">Medrec API</a>.</p>
                     </div>
                 </div>
             </div>
