--- a/index.html
+++ b/index.html
@@ -168,15 +168,17 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>The MedRec Platform is essentially a playpen with some basic elements at its core such as,
-                    <p>  a rudimentary System of Record (Avitek – MedRec) to act as a discussion point around Systems of Record, and the need to differentiate and innovate outside of the Systems of Record. <p>
-                    <p>  a re-developed next generation version of MedRec based on a MicroServices based approach (MedRec NG) to deliver learnings around API development and DevOps.</p>
-                    <p>  a modern User Interface rolled on top of the API's developed for MedRec NG to demonstrate what is possible on improved customer experience.</p>
+                    <p>The MedRec Platform is essentially a playpen with some basic elements at its core such as:
+                    <p>  A rudimentary System of Record (Avitek – MedRec) to act as a discussion point around Systems of Record, and the need to differentiate and innovate outside of the Systems of Record. <p>
+                    <p>  A re-developed next generation version of MedRec based on a MicroServices based approach (MedRec NG) to deliver learnings around API development and DevOps.</p>
+                    <p>  A modern User Interface rolled on top of the API's developed for MedRec NG to demonstrate what is possible on improved customer experience.</p>
                     <p>  Java based internal APIs that support CRUD operations against MedRec NG to provide a starting point upon which participants can bring their innovative ideas to explore and prove.</p>
-                    <p>  With the core application and internal API’s locked down as Version 1, the MedRec Platform Playpen will then serve as a vehicle to overlay innovative ideas and implement them using various Cloud Services (IaaS, PaaS, SaaS) and Open Source software to demonstrate proof points around the ideas.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a developer looking to share your projects, this platform is the perfect starting point!</p>
+                    <p>With the core application and internal API’s locked down as Version 1, the MedRec Platform Playpen will then serve as a vehicle to overlay innovative ideas and implement them using various Cloud Services (IaaS, PaaS, SaaS) and Open Source software to demonstrate proof points around the ideas.</p>
+                    <p>It is hoped that this platform will encourage fun, learning and innovation from a number of perspectives whether you are running a workshop, running a conference, or a hackathon or just self-learning around the following areas;</p>
+                    <p> Ployglot Development (JEE, JavaScript, Python, Node,js etc), APIs, Integration, Security, Containers, Registries, Source Code Management and Control (GitHub), Operating System (Linux), Mobility, Chatbots, Robotics. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
