updated new navigation

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="#who">Who is for</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -188,6 +191,38 @@
             </div>
         </div>
     </section>
+
+
+<!-- Who section -->
+<section class="success" id="who">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Who</h2>
+                <hr class="star-light">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-lg-offset-2">
+                <p>The MedRec Platform Playpen supports a diverse range of users and activities, such as,</p>
+                <p>  Business Managers walking through functional demonstrations of a Digital Platform
+                     Platform Architects walking through technical aspects of a Digital Platform
+                     Growing set of Speed To Value Workshops: <p>
+
+            </div>
+            <div class="col-lg-4">
+              <p>  CloudInAction,
+                   APIsInAction,
+                   DevelopersInAction,
+                   Others
+                    -	Cloud Platform Service Providers such as Rubicon Red, Limepoint, DXC RedRock etc
+                    -	Developers participating in Hackathons
+                    -	University Students
+                    -	Anyone interested in improving their understanding of what makes a Cloud Based Digital Platform</p>
+                </div>
+        </div>
+    </div>
+</section>
 
     <!-- Contact Section -->
     <section id="contact">
