--- a/index.html
+++ b/index.html
@@ -349,11 +349,15 @@
                         <div class="modal-body">
                             <h2>GIT Projects</h2>
                             <hr class="star-primary">
+                            <h1>MedRec Platform - Get Started with GIT repository</h1>
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p style="text-align:left">MedRec Next Generation Git Repository: This tutorial describes breaking down a monolithic application into a microservices architecture.</p>
+                            <p class="medrecalign"> We’ll use the Avitek Medical Records as our monolithic application. </p>
+
+                            <p> What is MedRec</P>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>
+                                    <strong>End-to-end sample Java EE Application simulating a centralized medical record system
                                     </strong>
                                 </li>
                                 <li>Date:
