First page changes

--- a/index.html
+++ b/index.html
@@ -352,22 +352,27 @@
                             <h1>MedRec Platform - Get Started with GIT repository</h1>
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
                             <p style="text-align:left">MedRec Next Generation Git Repository: This tutorial describes breaking down a monolithic application into a microservices architecture.</p>
-                            <p class="medrecalign"> We’ll use the Avitek Medical Records as our monolithic application. </p>
+                            <p style="text-align:left"> We’ll use the Avitek Medical Records as our monolithic application. </p>
 
-                            <p> What is MedRec</P>
-                            <ul class="list-inline item-details">
+                            <p style="text-align:left"><b> What is MedRec?</b></P>
+                            <ul class="list">
                                 <li>
-                                    <strong>End-to-end sample Java EE Application simulating a centralized medical record system
-                                    </strong>
+                                    <p style="text-align:left">End-to-end sample Java EE Application simulating a centralized medical record system
+                                    </p>
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
+                                <li>
+                                    <p style="text-align:left">Demonstrates various aspects of Java EE, WebLogic and its components
+                                    </p>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
+                                <li>
+                                    <p style="text-align:left">Illustrates various design patterns
+                                    </p>
                                 </li>
+                                <li>
+                                    <p style="text-align:left"><a href="http://www.oracle.com/webfolder/technetwork/tutorials/obe/fmw/wls/12c/12_2_1/02-34-004-DeploySampleApplication/deploysampleapplication.html"> Avitek Medical Records Documentation </a>
+                                    </p>
+                                </li>
+
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
