--- a/index.html
+++ b/index.html
@@ -181,7 +181,40 @@
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a developer looking to share your projects, this platform is the perfect starting point!</p>
                     <p>With the core application and internal API’s locked down as Version 1, the MedRec Platform Playpen will then serve as a vehicle to overlay innovative ideas and implement them using various Cloud Services (IaaS, PaaS, SaaS) and Open Source software to demonstrate proof points around the ideas.</p>
                     <p>It is hoped that this platform will encourage fun, learning and innovation from a number of perspectives whether you are running a workshop, running a conference, or a hackathon or just self-learning around the following areas;</p>
-                    <p> Ployglot Development (JEE, JavaScript, Python, Node,js etc), APIs, Integration, Security, Containers, Registries, Source Code Management and Control (GitHub), Operating System (Linux), Mobility, Chatbots, Robotics. </p>
+                    <ul class="list">
+                        <li>
+                            <p>Ployglot Development (JEE, JavaScript, Python, Node,js etc)
+                            </p>
+                        </li>
+                        <li>
+                            <p>APIs
+                            </p>
+                        </li>
+                        <li>
+                            <p>Integration
+                            </p>
+                        </li>
+                        <li>
+                            <p>Security
+                            </p>
+                        </li>
+                        <li>
+                            <p>Containers, Registries
+                            </p>
+                        </li>
+                        <li>
+                            <p>Source Code Management and Control (GitHub)
+                            </p>
+                        </li>
+                        <li>
+                            <p>Operating System (Linux)
+                            </p>
+                        </li>
+                        <li>
+                            <p>Mobility, Chatbots, Robotics
+                            </p>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
@@ -198,7 +231,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Who</h2>
+                <h2>Who is For</h2>
                 <hr class="star-light">
             </div>
         </div>
@@ -349,7 +382,7 @@
                         <div class="modal-body">
                             <h2>GIT Projects</h2>
                             <hr class="star-primary">
-                            <h1>MedRec Platform - Get Started with GIT repository</h1>
+                            <h1 style="text-align: left">MedRec Platform - Get Started with GIT repository</h1>
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
                             <p style="text-align:left">MedRec Next Generation Git Repository: This tutorial describes breaking down a monolithic application into a microservices architecture.</p>
                             <p style="text-align:left"> We’ll use the Avitek Medical Records as our monolithic application. </p>
@@ -374,6 +407,18 @@
                                 </li>
 
                             </ul>
+                            <p style="text-align:left"><b> Quickstart</b></P>
+                              <ol >
+                                <li><p style="text-align:left">Clone and run</p>
+
+                                  <div ><pre ><code><span style="float:left">$ </span><span style="float:left">git clone https://github.com/barackd222/medrecng</span>
+                                    <span style="float:left">$ </span><span style="float:left">git checkout dev</span>
+                                    <span style="float:left">$ </span><span style="float:left">mvn -Pdev spring-boot:run</span>
+                                    </code></pre>
+                                  </div>
+                                </li>
+                              </ol>
+
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
