hackathon page update

--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                             <h2>Hackathons</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-                            <p>Work In Progress - Check Back Later</p>
+                            <p style="text-align:left">Work In Progress - Check Back Later</p>
 
                             <button id="btnSubmit" type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
