--- a/index.html
+++ b/index.html
@@ -405,7 +405,6 @@
                                     <p style="text-align:left"><a href="http://www.oracle.com/webfolder/technetwork/tutorials/obe/fmw/wls/12c/12_2_1/02-34-004-DeploySampleApplication/deploysampleapplication.html"> Avitek Medical Records Documentation </a>
                                     </p>
                                 </li>
-
                             </ul>
                             <p style="text-align:left"><b> Quickstart</b></P>
                               <ol >
@@ -438,24 +437,81 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Teach me</h2>
+                            <h2>Teach me please!</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
+                            <p style="text-align:left"><b>Tutorial Levels</b></P>
+                              <ul class="list">
+                                  <li>
+                                      <p style="text-align:left">Basic: 1-5
+                                      </p>
+                                  </li>
+                                  <li>
+                                      <p style="text-align:left">Intermediate: 6-10
+                                      </p>
+                                  </li>
+                                  <li>
+                                      <p style="text-align:left">Advanced: 9-15
+                                      </p>
+                                  </li>
+                              </ul>
+                            <p style="text-align:left"><b>Tutorial #0: Setup the development environment</b></P>
+                              <ol>
+                                <li style="font-size: 1.5em">
+                                  <p style="text-align:left"><a href="#"> Java 8 </a></p>
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
+                                <li style="font-size: 1.5em">
+                                  <p style="text-align:left"><a href="#"> Netbeans </a></p>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
+                                <li style="font-size: 1.5em">
+                                  <p style="text-align:left"><a href="#"> Git </a></p>
                                 </li>
-                            </ul>
+                                <li style="font-size: 1.5em">
+                                  <p style="text-align:left"><a href="#"> Maven </a></p>
+                                </li>
+                              </ol>
+                              <p style="text-align:left"><b>Tutorial #1: Setting up the project</b></P>
+                                <ol>
+                                  <li style="font-size: 1.5em">
+                                    <p style="text-align:left"><a href="#"> Setting up a basic project based on Spring Boot </a></p>
+                                  </li>
+                                  <li style="font-size: 1.5em">
+                                    <p style="text-align:left"><a href="#"> Adding maven profiles and dependencies </a></p>
+                                  </li>
+                                </ol>
+                                <p style="text-align:left"><b>Tutorial #2: Interact with the database</b></P>
+                                  <ol>
+                                    <li  style="font-size: 1.5em">
+                                      <p style="text-align:left"><a href="#"> Adding H2 as an in-memory database </a></p>
+                                    </li>
+                                    <li style="font-size: 1.5em">
+                                      <p style="text-align:left"><a href="#"> Adding and configuring liquibase support </a></p>
+                                    </li>
+                                    <li style="font-size: 1.5em">
+                                      <p style="text-align:left"><a href="#"> Generate data with liquibase </a></p>
+                                    </li>
+                                    <li style="font-size: 1.5em">
+                                      <p style="text-align:left"><a href="#"> Create entity classes </a></p>
+                                    </li>
+                                    <li style="font-size: 1.5em">
+                                      <p style="text-align:left"><a href="#"> Create Spring JPA repositories </a></p>
+                                    </li>
+                                  </ol>
+                                  <p style="text-align:left"><b>Tutorial #3: Creating a project and build in DevCS</b></P>
+                                    <ol>
+                                      <li  style="font-size: 1.5em">
+                                        <p style="text-align:left"><a href="#"> Create a project and repository in DevCS </a></p>
+                                      </li>
+                                      <li style="font-size: 1.5em">
+                                        <p style="text-align:left"><a href="#"> Create a build job </a></p>
+                                      </li>
+                                    </ol>
+                                    <p style="text-align:left"><b>Tutorial #4: Configure Logging</b></P>
+                                      <ol>
+                                        <li  style="font-size: 1.5em">
+                                          <p style="text-align:left"><a href="#"> Configure logging using logback </a></p>
+                                        </li>
+                                      </ol>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -549,24 +605,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Team</h2>
+                            <h2>Dream Team</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -614,7 +655,6 @@
 
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
-
 </body>
 
 </html>
